Added Prerequisite function for the rooms and added a new title

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1> TITLE OF MY TEXT ADVENTURE </h1>
+        <h1> The Dream </h1>
     </header>
 
     <main id="game">
