Added buildDescription function and changed html for copyright

--- a/game.html
+++ b/game.html
@@ -43,7 +43,7 @@
     </aside>
 
     <footer>
-        Copyright (c) 2014 YOUR NAME HERE. All rights reserved.
+        Copyright (c) 2014 Sami Ellougani. All rights reserved.
     </footer>
 
 </body>
