Made changes to the html because I added the player file and also started working on the gameIntro

--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8"/>
     <link href="game.css" rel="stylesheet" />
 	<script src="locations.js"></script>
+	<script src="player.js"></script>
 	<script src="game.js"></script>
 
 </head>
