Fixed multiple bugs, grammar, and added a few features.

--- a/game.html
+++ b/game.html
@@ -42,7 +42,17 @@
         <ul>
         </ul>
     </aside>
-
+	
+	<aside id="location">
+		<h1> Current Location </h1>
+		<ul>
+		</ul>
+	</aside>
+	
+	<aside id="name">
+		<h1></h1>
+	</aside>
+	
     <footer>
         Copyright (c) 2014 Sami Ellougani. All rights reserved.
     </footer>
